:bug: MainButton 위치 초기화, 홈 overflow-y:hidden

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -41,3 +41,7 @@ body::-webkit-scrollbar {
 .barlow {
     font-family: var(--font-barlow);
 }
+
+.home-scroll {
+    overflow-y: hidden !important;
+}
